# WeatherAnalyzer_Safronova

./: CMakeLists.txt  README.md
include/: AnalyticsService.h  AnomalyService.h  CityRepository.h  Database.h  ForecastService.h  ImportLogRepository.h  ImportService.h  Models.h  ObservationRepository.h  OpenMeteoClient.h  ReportService.h  StationRepository.h
src/: AnalyticsService.cpp  AnomalyService.cpp  CityRepository.cpp  Database.cpp  ForecastService.cpp  ImportLogRepository.cpp  ImportService.cpp  ObservationRepository.cpp  OpenMeteoClient.cpp  ReportService.cpp  StationRepository.cpp  main.cpp
